<resources>
    <string name="app_name">vezdecode</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="show_incorrect">Not enough symbols</string>
    <string name="enter">Enter</string>
    <string name="invalid">Invalid password</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm password</string>
    <string name="failConfirm">Invalid password. Try again</string>
    <string name="button_back">back</string>
    <string name="enter_password">Enter password</string>
    <string name="mail_icon">mail_icon</string>
    <string name="button_info">button_info</string>
    <string name="indicator">indicator</string>
    <string name="password_reset">password reset</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="name_story">Архитектура</string>
    <string name="category_story">Подборка для вас</string>
</resources>